sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:16: error: Unmatched closing brace '}' ignored here
            }
            ^AlgInsertionSort:19: error: Unmatched closing brace '}' ignored here
                    }
                    ^